# olympic_sports_tools

./: README.md  setup.cfg
olympic_sports/: convert_Olympic.py  parse_attributes.py  read_seq.py
olympic_sports/resources/: Olympic_Attributes.txt
