[metadata]
name = olympic_sports
version = 0.0.1
author = ariel
author_email = ariel.iporre.rivas@gmail.com
description = A small example package
long_description = file: README.md

[options]
packages = find:
install_requires =
  scikit-image >= 0.17.2
  scikit-video >= 1.1.11
include_package_data = True

[options.entry_points]
console_scripts =
    convert-olympic = olympic_sports.scripts.convert_Olympic:main

[options.package_data]
olympic_sports = resources/*
